src/index.css
@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@200;300;400;500;600;700&display=swap');


* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

:root {
  color-scheme: light dark;
  font-family: Bricolage Grotesque, Helvetica, Arial, sans-serif;

  --app-width: 1280px;
  --content-width: 960px;
  --min-content-width: 300px;
  --gutter: clamp(16px, 5vw, 48px);
}

:root.theme-chocolate {
  --background: #F6F3EC;
  --surface: #ECE4DA;
  --accent: #B9A590;
  --primary: #574C3F;
  --text: #36302A;
}

.app {
  display: grid;
  grid-template-columns: minmax(var(--gutter), 1fr) minmax(0, var(--content-width)) minmax(var(--gutter), 1fr);
  grid-row-gap: 48px;
  width: 100vw;
  min-height: 100vh;
}

section:not(.full-bleed) {
  grid-column: 2;
  max-width: var(--app-width);
  width: 100%;
}

section.full-bleed {
  grid-column: 1 / span 3;
}

.full-bleed-content {
  margin: 0 auto;
  max-width: var(--content-width);
  width: 100%;
}

body {
  background: var(--surface);
  color: var(--text);
  display: flex;
  font-size: 20px;
  font-weight: 300;
  margin: 0;
  min-height: 100vh;
}

b,
strong {
  font-weight: 500;
}

.site-title {
  font-size: 32px;
  font-weight: 300;
}

.display-1 {
  font-size: 90px;
  font-weight: 200;
  line-height: 100px;
}

.display-2 {
  font-size: 64px;
  font-weight: 200;
  line-height: 80px;
}

.display-3 {
  font-size: 36px;
  font-weight: 200;
  line-height: 46px;
}

a,
a:link,
a:visited {
  color: unset;
}

.button {
  align-items: center;
  border: 1px solid var(--primary);
  border-radius: 24px;
  color: text;
  display: flex;
  flex-flow: row nowrap;
  gap: 8px;
  font-size: 18px;
  font-weight: 400;
  padding: 12px 16px;
  width: fit-content;
  text-decoration: none;
  transition: color 0.25s ease, color 0.25s ease;
  transition: background-color 0.25s ease, color 0.25s ease;
}

.button.primary {
  background-color: var(--primary);
  color: var(--background);
}

.button:hover,
.button.primary:hover {
  background-color: var(--accent);
  color: var(--background);
}


.button-large {
  align-items: center;
  color: text;
  display: flex;
  flex-flow: row nowrap;
  gap: 16px;
  font-size: 32px;
  font-weight: 200;
  /* padding: 12px 16px; */
  width: fit-content;
  text-decoration: none;
  transition: color 0.25s ease, color 0.25s ease;
  transition: background-color 0.25s ease, color 0.25s ease;
}

.button-large .button-icon {
  font-size: 32px;
}

h1 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 64px;
  font-weight: 300;
}

h2 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 36px;
  font-weight: 200;
}

h3 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 22px;
  font-weight: 300;
}

h4 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 20px;
  font-weight: 300;
}

h5 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 19px;
  font-weight: 300;
}

h6 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 18px;
  font-weight: 300;
}

p {
  font-size: 20px;
  font-weight: 200;
  line-height: 30px;
  margin: 0 0 20px 0;
}

.paragraph-largest {
  font-size: 36px;
  font-weight: 200;
  line-height: 1.5em;
}

.paragraph-large {
  font-size: 26px;
  font-weight: 200;
  line-height: 1.5em;
}

.label {
  letter-spacing: .02em;
  text-transform: uppercase;
  font-size: 15px;
  font-weight: 200;
  line-height: 25px;
}

